workloads/podinfo-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-podinfo
  namespace: demo
  labels:
    app: podinfo
    foo: bar
  annotations:
    fluxcd.io/automated: "true"
    fluxcd.io/tag.init: regex:^3.10.*
    fluxcd.io/tag.podinfod: semver:~3.1
spec:
  replicas: 1
  strategy:
    canary:
      canaryService: podinfo-canary
      stableService: podinfo-stable
      trafficRouting:
        nginx:
          stableIngress: rollouts-podinfo-stable
      steps:
      - setWeight: 5
      - setWeight: 40
      - setWeight: 100
  revisionHistoryLimit: 2
  selector:
    matchLabels:
        app: podinfo
  template:
    metadata:
      labels:
        app: podinfo
        gitops: argocd
    spec:
      containers:
      - name: podinfod
        image: stefanprodan/podinfo:3.1.5
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 9898
          protocol: TCP
        - name: http-metrics
          containerPort: 9797
          protocol: TCP
        - name: grpc
          containerPort: 9999
          protocol: TCP
        command:
        - ./podinfo
        - --port=9898
        - --port-metrics=9797
        - --grpc-port=9999
        - --grpc-service-name=podinfo
        - --level=info
        - --random-delay=false
        - --random-error=false
        - --ui-message='Welcome to Flux :P'
        livenessProbe:
          httpGet:
            path: /healthz
            port: 9898
        readinessProbe:
          httpGet:
            path: /readyz
            port: 9898
        resources:
          limits:
            cpu: 1000m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 64Mi
