workloads/podinfo.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo-canary
  namespace: demo
spec:
  ports:
  - port: 9898
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: podinfo
    # This selector will be updated with the pod-template-hash of the canary ReplicaSet. e.g.:
    # rollouts-pod-template-hash: 7bf84f9696
---
apiVersion: v1
kind: Service
metadata:
  name: podinfo-stable
spec:
  ports:
  - port: 9898
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: podinfo
    # This selector will be updated with the pod-template-hash of the stable ReplicaSet. e.g.:
    # rollouts-pod-template-hash: 789746c88d
